# django_auth

./: .gitignore  Dockerfile  README.md  entrypoint.sh
accounts/: urls.py  views.py
accounts/templates/: accounts.html
accounts/templates/registration/: login.html  signup.html
authentication/: pyproject.toml
authentication/accounts/: forms.py  urls.py
authentication/accounts/static/css/: style.css
authentication/accounts/templates/: home.html
authentication/accounts/templates/registration/: login.html  signup.html
authentication/settings/: settings.py
settings/: settings.py  urls.py
